fix: center align coder animation

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -1220,6 +1220,11 @@ h1 span.fa, h2 span.fa, h3 span.fa, h4 span.fa, h5 span.fa, h6 span.fa {
     height: 250px;
     width: 250px;
 }
+.herecomesbitcoin-coder-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .herecomesbitcoin-cat {
   width: 300px;
   height: 300px;
